--- a/Configuration/crab/crab.cfg
+++ b/Configuration/crab/crab.cfg
@@ -5,7 +5,9 @@ total_number_of_lumis   = -1
 number_of_jobs          = 50
 pset                    = TopMass/Analyzer/test/analyzeTopHypotheses_cfg.py
 dbs_url = http://cmsdbsprod.cern.ch/cms_dbs_ph_analysis_02/servlet/DBSServlet
-datasetpath=/TTJets_TuneD6T_7TeV-madgraph-tauola/snaumann-SingleMuSkim_1-77c3ad1ea85046d30b430315aa7f3138/USER
+#datasetpath=/TTJets_TuneD6T_7TeV-madgraph-tauola/snaumann-SingleMuSkim_1-77c3ad1ea85046d30b430315aa7f3138/USER
+#datasetpath=/TTJets_TuneD6T_mass166_5_7TeV-madgraph-tauola/snaumann-SingleMuSkim_1-77c3ad1ea85046d30b430315aa7f3138/USER
+datasetpath=/TTJets_TuneD6T_mass178_5_7TeV-madgraph-tauola/snaumann-SingleMuSkim_1-77c3ad1ea85046d30b430315aa7f3138/USER
 
 #output_file              = Data.root
 
