--- a/Configuration/crab/crab.cfg
+++ b/Configuration/crab/crab.cfg
@@ -5,9 +5,11 @@ total_number_of_lumis   = -1
 number_of_jobs          = 50
 pset                    = TopMass/Analyzer/test/analyzeTopHypotheses_cfg.py
 dbs_url = http://cmsdbsprod.cern.ch/cms_dbs_ph_analysis_02/servlet/DBSServlet
-datasetpath=/TTJets_TuneD6T_7TeV-madgraph-tauola/snaumann-SingleMuSkim_1-77c3ad1ea85046d30b430315aa7f3138/USER
+#datasetpath=/TTJets_TuneD6T_7TeV-madgraph-tauola/snaumann-SingleMuSkim_1-77c3ad1ea85046d30b430315aa7f3138/USER
 #datasetpath=/TTJets_TuneD6T_mass166_5_7TeV-madgraph-tauola/snaumann-SingleMuSkim_1-77c3ad1ea85046d30b430315aa7f3138/USER
 #datasetpath=/TTJets_TuneD6T_mass178_5_7TeV-madgraph-tauola/snaumann-SingleMuSkim_1-77c3ad1ea85046d30b430315aa7f3138/USER
+#datasetpath=/WJetsToLNu_TuneD6T_7TeV-madgraph-tauola/snaumann-SingleMuSkim_1-5ee9adefa6520fc6d272ebee08ff3fbf/USER
+datasetpath=/VQQJetsToLL_TuneD6T_7TeV-madgraph-tauola/henderle-PAT_FALL10HH-148435cd71339b79cc0025730c13472a/USER
 
 #output_file              = Data.root
 
@@ -31,5 +33,5 @@ se_white_list           = dcache-se-cms.desy.de
 #T2_DE_DESY
 
 [SGE]
-resource = -V -l h_vmem=2G -l h_cpu=00:59:59 -l site=hh
+resource = -V -l h_vmem=2G -l h_cpu=23:59:59 -l site=hh
 
