--- a/Configuration/grid-control/Run2011_ElectronHad.conf
+++ b/Configuration/grid-control/Run2011_ElectronHad.conf
@@ -8,16 +8,16 @@ backend      = local
 wall time    = 47:59 ; request 15min/1h/12h/48h computing time
 memory       = 7000
 ;monitor      = dashboard
-max retry    = 3
+max retry    = 5
 
 [storage]
 se path           = dir:///scratch/hh/current/cms/user/mseidel
 se output files   = analyzeTop.root
-se output pattern = @NICK@_ElectronHad/job_@MY_JOBID@_@X@
+se output pattern = @NICK@_electron/job_@MY_JOBID@_@X@
 
 [CMSSW_Advanced]
 project area    = /afs/naf.desy.de/user/m/mseidel/scratch/CMSSW_4_2_4
-nickname config = %(project area)s/src/TopMass/Analyzer/test/analyzeTopHypotheses_data_cfg.py
+nickname config = %(project area)s/src/TopMass/Configuration/analysis/analyzeTopHypotheses_data_cfg.py
 dataset         = 
     Run2011A1 : /ElectronHad/Run2011A-May10ReReco-v1/AOD
     Run2011A4 : /ElectronHad/Run2011A-PromptReco-v4/AOD
