--- a/Configuration/grid-control/Run2011.conf
+++ b/Configuration/grid-control/Run2011.conf
@@ -13,11 +13,11 @@ max retry    = 3
 [storage]
 se path           = dir:///scratch/hh/current/cms/user/mseidel
 se output files   = analyzeTop.root
-se output pattern = @NICK@/job_@MY_JOBID@_@X@
+se output pattern = @NICK@_muon/job_@MY_JOBID@_@X@
 
 [CMSSW_Advanced]
 project area    = /afs/naf.desy.de/user/m/mseidel/scratch/CMSSW_4_2_4
-nickname config = %(project area)s/src/TopMass/Analyzer/test/analyzeTopHypotheses_data_cfg.py
+nickname config = %(project area)s/src/TopMass/Configuration/analysis/analyzeTopHypotheses_data_cfg.py
 dataset         = 
     Run2011A1 : /SingleMu/Run2011A-May10ReReco-v1/AOD
     Run2011A4 : /SingleMu/Run2011A-PromptReco-v4/AOD
