--- a/Configuration/grid-control/Summer11_TTJets.conf
+++ b/Configuration/grid-control/Summer11_TTJets.conf
@@ -8,42 +8,30 @@ backend      = local
 wall time    = 11:59 ; request 15min/1h/12h/48h computing time
 memory       = 3500
 ;monitor      = dashboard
-max retry    = 2
+max retry    = 0
 
 [storage]
 se path           = dir:///scratch/hh/current/cms/user/mseidel
 se output files   = analyzeTop.root
-se output pattern = Summer11_@NICK@_@lJesFactor@/job_@MY_JOBID@_@X@
+se output pattern = Summer11_@NICK@_@lJesFactor@_@lepton@/job_@MY_JOBID@_@X@
 
 
 [CMSSW]
 project area    = /afs/naf.desy.de/user/m/mseidel/scratch/CMSSW_4_2_4
-config file     = %(project area)s/src/TopMass/Analyzer/test/analyzeTopHypotheses_cfg.py
+config file     = %(project area)s/src/TopMass/Configuration/analysis/analyzeTopHypotheses_cfg.py
 dataset         = 
-;        TTJets1615      : /TTJets_TuneZ2_mass161_5_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v3/AODSIM
-;        TTJets1635      : /TTJets_TuneZ2_mass163_5_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v3/AODSIM
-;        TTJets1665      : /TTJets_TuneZ2_mass166_5_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v3/AODSIM
-;        TTJets1695      : /TTJets_TuneZ2_mass169_5_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v3/AODSIM
+        TTJets1615      : /TTJets_TuneZ2_mass161_5_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v3/AODSIM
+        TTJets1635      : /TTJets_TuneZ2_mass163_5_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v3/AODSIM
+        TTJets1665      : /TTJets_TuneZ2_mass166_5_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v3/AODSIM
+        TTJets1695      : /TTJets_TuneZ2_mass169_5_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v3/AODSIM
         TTJets1725      : /TTJets_TuneZ2_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-;        TTJets1755      : /TTJets_TuneZ2_mass175_5_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v3/AODSIM
-;        TTJets1785      : /TTJets_TuneZ2_mass178_5_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v3/AODSIM
-;        TTJets1815      : /TTJets_TuneZ2_mass181_5_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v3/AODSIM
-;        TTJets1845      : /TTJets_TuneZ2_mass184_5_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v3/AODSIM
-
-;        WJets           : /WJetsToLNu_TuneZ2_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-;        Tbar_s-channel  : /Tbar_TuneZ2_s-channel_7TeV-powheg-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-;        Tbar_t-channel  : /Tbar_TuneZ2_t-channel_7TeV-powheg-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-;        Tbar_tW-channel : /Tbar_TuneZ2_tW-channel-DR_7TeV-powheg-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-;        T_s-channel     : /T_TuneZ2_s-channel_7TeV-powheg-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-;        T_t-channel     : /T_TuneZ2_t-channel_7TeV-powheg-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-;        T_tW-channel    : /T_TuneZ2_tW-channel-DR_7TeV-powheg-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-;        TTJets1725_matchingdown : /TTjets_TuneZ2_matchingdown_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-;        TTJets1725_matchingup : /TTjets_TuneZ2_matchingup_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-;        TTJets1725_scaledown : /TTjets_TuneZ2_scaledown_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-;        TTJets1725_scaleup : /TTjets_TuneZ2_scaleup_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
+        TTJets1755      : /TTJets_TuneZ2_mass175_5_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v3/AODSIM
+        TTJets1785      : /TTJets_TuneZ2_mass178_5_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v3/AODSIM
+        TTJets1815      : /TTJets_TuneZ2_mass181_5_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v3/AODSIM
+        TTJets1845      : /TTJets_TuneZ2_mass184_5_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v3/AODSIM
 
 
-arguments = sample=ttbar
+arguments = sample=ttbar lepton=@lepton@
 ;arguments = sample=wjets
 ;arguments = sample=singleAntiTopS
 ;arguments = sample=singleAntiTopT
@@ -59,13 +47,14 @@ area files       = -.* -config lib module python */data *.xml *.sql *.cf[if] *.p
 
 [ParaMod]
 module     = CMSSW
-parameters = lJesFactor bJesFactor scaleType
+parameters = lJesFactor bJesFactor scaleType lepton
 ;;lJesFactor = global JES
-;lJesFactor = 0.96 1.00 1.04
+lJesFactor = 0.96 1.00 1.04
 ;bJesFactor = 0.96 1.00 1.04
-lJesFactor = 1.00
+;lJesFactor = 1.00
 bJesFactor = 1.00
 scaleType  = abs
+lepton = muon electron
 
 [local]
 ;group = cms
