--- a/Configuration/grid-control/topmass_sys.conf
+++ b/Configuration/grid-control/topmass_sys.conf
@@ -3,30 +3,30 @@ module     = MultiParaMod     ; Job uses user written scripts
 backend    = local       ; Submit to local batch system
 
 [jobs]
-wall time  = 0:59
+wall time  = 11:59
 memory     = 3500
 max retry  = 10
 
 [ROOTMod]
 executable = CMSSW_4_2_4/src/TopMass/Analyzer/TopMass
-arguments  = -t pe -i @INPUT@ -M 172.5 -J 1.0 -l @LEPTON@ -L 5000 -W 50
+arguments  = -t pe -i @INPUT@ -M 172.5 -J 1.0 -l @LEPTON@ -L 5000 -W 500
 root path  = /afs/naf.desy.de/products/root/amd64_rhel50/5.32.00
 
 [storage]
-se path         = dir:///scratch/hh/current/cms/user/mseidel/topmass_120412_2120cp
+se path         = dir:///scratch/hh/current/cms/user/mseidel/topmass_120522_1120_cp1D
 se output files = ensemble.root
-se output pattern = @LEPTON@/@INPUT@/job4_@MY_JOBID@_@X@
+se output pattern = @LEPTON@/@INPUT@/job_@MY_JOBID@_@X@
 
 [ParaMod]
 module           = ROOTMod
-jobs             = 80
+jobs             = 40
 
 parameters = INPUT LEPTON
 
 INPUT = 
     Fall11_TTJets1725_1.00
-    Fall11_TTJets1725_flavor:down
-    Fall11_TTJets1725_flavor:up
+;    Fall11_TTJets1725_flavor:down
+;    Fall11_TTJets1725_flavor:up
     Fall11_TTJets1725_jer:down
     Fall11_TTJets1725_jer:up
     Fall11_TTJets1725_jes:down
@@ -37,5 +37,12 @@ INPUT =
     Fall11_TTJets1725_scaleup
 ;    Fall11_TTJets1725_METCL1
     Fall11_TTJets1725_P11
+    Fall11_TTJets1725_P11noCR
+;    Fall11_TTJets1725_EES_up
+;    Fall11_TTJets1725_EES_down
+;    Fall11_TTJets1725_MES_up
+;    Fall11_TTJets1725_MES_down
+;    Fall11_TTJets1725_UNC_0.9
+;    Fall11_TTJets1725_UNC_1.1
 INPUT type = lines
-LEPTON = all
+LEPTON = electron muon all
