--- a/Configuration/grid-control/topmass_sys_weight.conf
+++ b/Configuration/grid-control/topmass_sys_weight.conf
@@ -1,32 +1,30 @@
 [global]
-module     = SimpleParaMod     ; Job uses user written scripts
+module     = MultiParaMod     ; Job uses user written scripts
 backend    = local       ; Submit to local batch system
 
 [jobs]
-wall time  = 0:59
+wall time  = 11:59
+memory     = 3500
 max retry  = 1
 
 [ROOTMod]
 executable = CMSSW_4_2_4/src/TopMass/Analyzer/TopMass
-arguments  = -t pe -i Fall11_TTJets1725_v2_1.00_muon -M 172.5 -J 1.0 -L 5000 -W 55 -w @WEIGHT@
+arguments  = -t pe -i Fall11_TTJets1725_1.00 -M 172.5 -J 1.0 -l @LEPTON@ -L 5000 -W 500 -w @WEIGHT@
 root path  = /afs/naf.desy.de/products/root/amd64_rhel50/5.32.00
 
 [storage]
-se path         = dir:///scratch/hh/current/cms/user/mseidel/topmass_120412_2120c
+se path         = dir:///scratch/hh/current/cms/user/mseidel/topmass_120412_2120cp
 se output files = ensemble.root
-se output pattern = @WEIGHT@/job_@MY_JOBID@_@X@
+se output pattern = @LEPTON@/@WEIGHT@/job_@MY_JOBID@_@X@
 
 [ParaMod]
 module           = ROOTMod
-jobs             = 80
+jobs             = 40
 
-parameter name   = WEIGHT
+parameters = WEIGHT LEPTON
 
-parameter values = 
+WEIGHT = 
     muWeight-bWeight-PUWeightUp
     muWeight-bWeight-PUWeightDown
-    muWeight-bWeight_bTagSFUp-PUWeight
-    muWeight-bWeight_bTagSFDown-PUWeight
-    muWeight-bWeight_misTagSFUp-PUWeight
-    muWeight-bWeight_misTagSFDown-PUWeight
-    
+WEIGHT type = lines
+LEPTON  = electron muon all
