--- a/Configuration/grid-control/Fall11_TTJets_ExtraSamples.conf
+++ b/Configuration/grid-control/Fall11_TTJets_ExtraSamples.conf
@@ -5,8 +5,8 @@ backend      = local
 [jobs]
 ;jobs         = 1  ; limit number of jobs, comment out to run over all events in a dataset
 ;in flight    = 10   ; maximum number of concurrently submitted jobs
-wall time    = 11:59 ; request 15min/1h/12h/48h computing time
-memory       = 3500
+wall time    = 5:59 ; request 15min/1h/12h/48h computing time
+memory       = 7000
 ;monitor      = dashboard
 max retry    = 10
 
@@ -24,13 +24,15 @@ dataset         =
 ;  TTJets1725_matchingup : /TTjets_TuneZ2_matchingup_7TeV-madgraph-tauola/Fall11-PU_S6_START42_V14B-v2/AODSIM
 ;  TTJets1725_scaledown : /TTjets_TuneZ2_scaledown_7TeV-madgraph-tauola/Fall11-PU_S6_START42_V14B-v2/AODSIM
 ;  TTJets1725_scaleup : /TTjets_TuneZ2_scaleup_7TeV-madgraph-tauola/Fall11-PU_S6_START42_V14B-v1/AODSIM
-;  TTJets1725_P11 : /TTJets_TuneP11_7TeV-madgraph-tauola/Fall11-PU_S6_START42_V14B-v1/AODSIM
-  TTJets1725_P11noCR : /TTJets_TuneP11noCR_7TeV-madgraph-tauola/Fall11-PU_S6_START42_V14B-v2/AODSIM
+  TTJets1725_P11_CRStudy : /TTJets_TuneP11_7TeV-madgraph-tauola/Fall11-PU_S6_START42_V14B-v1/AODSIM
+  TTJets1725_P11noCR_CRStudy : /TTJets_TuneP11noCR_7TeV-madgraph-tauola/Fall11-PU_S6_START42_V14B-v2/AODSIM
+;  TTJets1725_powheg : /TT_TuneZ2_7TeV-powheg-tauola/Fall11-PU_S6_START42_V14B-v1/AODSIM
+;  TTJets1725_mcatnlo : /TT_TuneZ2_7TeV-mcatnlo/Fall11-PU_S6_START42_V14B-v1/AODSIM
 
 
 arguments = lepton=@lepton@ mcversion=Fall11
 
-events per job  = 120000  ; TTJets (~9h)
+events per job  = 30000  ; TTJets (~9h)
 
 area files       = -.* -config lib module python */data *.xml *.sql *.cf[if] *.py *.root
 
@@ -40,7 +42,7 @@ parameters = lJesFactor bJesFactor scaleType lepton
 lJesFactor = 1.00
 bJesFactor = 1.00
 scaleType  = abs
-lepton = muon electron
+lepton = electron
 
 [local]
 ;group = cms
