--- a/Configuration/grid-control/Run2011_ElectronHad.conf
+++ b/Configuration/grid-control/Run2011_ElectronHad.conf
@@ -13,7 +13,7 @@ max retry    = 5
 [storage]
 se path           = dir:///scratch/hh/current/cms/user/mseidel
 se output files   = analyzeTop.root
-se output pattern = @NICK@_electron/job_@MY_JOBID@_@X@
+se output pattern = @NICK@_CRStudy_electron/job_@MY_JOBID@_@X@
 
 [CMSSW_Advanced]
 project area    = /afs/naf.desy.de/user/m/mseidel/scratch/CMSSW_4_2_4
