--- a/Configuration/grid-control/topmass_sys_bkg.conf
+++ b/Configuration/grid-control/topmass_sys_bkg.conf
@@ -15,7 +15,7 @@ root path  = /afs/naf.desy.de/products/root/amd64_rhel50/5.32.00
 [storage]
 se path         = dir:///scratch/hh/current/cms/user/mseidel/topmass_120412_2120cp
 se output files = ensemble.root
-se output pattern = @LEPTON@/fSig_@FSIG@/job_@MY_JOBID@_@X@
+se output pattern = @LEPTON@/fSig_@FSIG@_Wbb/job_@MY_JOBID@_@X@
 
 [ParaMod]
 module           = ROOTMod
@@ -23,5 +23,5 @@ jobs             = 40
 
 parameters = FSIG LEPTON
 
-FSIG    = 0.92 1.00
+FSIG    = 0.98
 LEPTON  = electron muon all
