--- a/Configuration/grid-control/Run2011.conf
+++ b/Configuration/grid-control/Run2011.conf
@@ -13,7 +13,7 @@ max retry    = 3
 [storage]
 se path           = dir:///scratch/hh/current/cms/user/mseidel
 se output files   = analyzeTop.root
-se output pattern = @NICK@_muon/job_@MY_JOBID@_@X@
+se output pattern = @NICK@_CRStudy_muon/job_@MY_JOBID@_@X@
 
 [CMSSW_Advanced]
 project area    = /afs/naf.desy.de/user/m/mseidel/scratch/CMSSW_4_2_4
