--- a/Configuration/grid-control/topmass.conf
+++ b/Configuration/grid-control/topmass.conf
@@ -13,44 +13,44 @@ arguments  = -t pe -i @INPUT@ -M @MASS@ -J @JES@ -l @LEPTON@ -L 5000 -W 500
 root path  = /afs/naf.desy.de/products/root/amd64_rhel50/5.32.00
 
 [storage]
-se path         = dir:///scratch/hh/current/cms/user/mseidel/topmass_120530_0840c
+se path         = dir:///scratch/hh/current/cms/user/mseidel/topmass_120606_1617
 se output files = ensemble.root
 se output pattern = @LEPTON@/job_@MY_JOBID@_@X@
 
 [ParaMod]
 module           = ROOTMod
-jobs             = 40
+jobs             = 20
 
 parameter name   = MASS:JES:LEPTON:INPUT
 
 parameter values =
-;    161.5 :  0.96 : muon : Fall11_TTJets1615_0.96
-;    161.5 :  1.00 : muon : Fall11_TTJets1615_1.00
-;    161.5 :  1.04 : muon : Fall11_TTJets1615_1.04
-;    163.5 :  0.96 : muon : Summer11_TTJets1635_0.96
-;    163.5 :  1.00 : muon : Summer11_TTJets1635_1.00
-;    163.5 :  1.04 : muon : Summer11_TTJets1635_1.04
-;    166.5 :  0.96 : muon : Summer11_TTJets1665_0.96
-;    166.5 :  1.00 : muon : Summer11_TTJets1665_1.00
-;    166.5 :  1.04 : muon : Summer11_TTJets1665_1.04
-;    169.5 :  0.96 : muon : Summer11_TTJets1695_0.96
-;    169.5 :  1.00 : muon : Summer11_TTJets1695_1.00
-;    169.5 :  1.04 : muon : Summer11_TTJets1695_1.04
-;    172.5 :  0.96 : muon : Fall11_TTJets1725_0.96
-;    172.5 :  1.00 : muon : Fall11_TTJets1725_1.00
-;    172.5 :  1.04 : muon : Fall11_TTJets1725_1.04
-;    175.5 :  0.96 : muon : Summer11_TTJets1755_0.96
-;    175.5 :  1.00 : muon : Summer11_TTJets1755_1.00
-;    175.5 :  1.04 : muon : Summer11_TTJets1755_1.04
-;    178.5 :  0.96 : muon : Summer11_TTJets1785_0.96
-;    178.5 :  1.00 : muon : Summer11_TTJets1785_1.00
-;    178.5 :  1.04 : muon : Summer11_TTJets1785_1.04
-;    181.5 :  0.96 : muon : Summer11_TTJets1815_0.96
-;    181.5 :  1.00 : muon : Summer11_TTJets1815_1.00
-;    181.5 :  1.04 : muon : Summer11_TTJets1815_1.04
-;    184.5 :  0.96 : muon : Fall11_TTJets1845_0.96
-;    184.5 :  1.00 : muon : Fall11_TTJets1845_1.00
-;    184.5 :  1.04 : muon : Fall11_TTJets1845_1.04
+    161.5 :  0.96 : muon : Fall11_TTJets1615_0.96
+    161.5 :  1.00 : muon : Fall11_TTJets1615_1.00
+    161.5 :  1.04 : muon : Fall11_TTJets1615_1.04
+    163.5 :  0.96 : muon : Summer11_TTJets1635_0.96
+    163.5 :  1.00 : muon : Summer11_TTJets1635_1.00
+    163.5 :  1.04 : muon : Summer11_TTJets1635_1.04
+    166.5 :  0.96 : muon : Summer11_TTJets1665_0.96
+    166.5 :  1.00 : muon : Summer11_TTJets1665_1.00
+    166.5 :  1.04 : muon : Summer11_TTJets1665_1.04
+    169.5 :  0.96 : muon : Summer11_TTJets1695_0.96
+    169.5 :  1.00 : muon : Summer11_TTJets1695_1.00
+    169.5 :  1.04 : muon : Summer11_TTJets1695_1.04
+    172.5 :  0.96 : muon : Fall11_TTJets1725_0.96
+    172.5 :  1.00 : muon : Fall11_TTJets1725_1.00
+    172.5 :  1.04 : muon : Fall11_TTJets1725_1.04
+    175.5 :  0.96 : muon : Summer11_TTJets1755_0.96
+    175.5 :  1.00 : muon : Summer11_TTJets1755_1.00
+    175.5 :  1.04 : muon : Summer11_TTJets1755_1.04
+    178.5 :  0.96 : muon : Summer11_TTJets1785_0.96
+    178.5 :  1.00 : muon : Summer11_TTJets1785_1.00
+    178.5 :  1.04 : muon : Summer11_TTJets1785_1.04
+    181.5 :  0.96 : muon : Summer11_TTJets1815_0.96
+    181.5 :  1.00 : muon : Summer11_TTJets1815_1.00
+    181.5 :  1.04 : muon : Summer11_TTJets1815_1.04
+    184.5 :  0.96 : muon : Fall11_TTJets1845_0.96
+    184.5 :  1.00 : muon : Fall11_TTJets1845_1.00
+    184.5 :  1.04 : muon : Fall11_TTJets1845_1.04
 ;    161.5 :  0.96 : electron : Fall11_TTJets1615_0.96
 ;    161.5 :  1.00 : electron : Fall11_TTJets1615_1.00
 ;    161.5 :  1.04 : electron : Fall11_TTJets1615_1.04
@@ -78,30 +78,30 @@ parameter values =
 ;    184.5 :  0.96 : electron : Fall11_TTJets1845_0.96
 ;    184.5 :  1.00 : electron : Fall11_TTJets1845_1.00
 ;    184.5 :  1.04 : electron : Fall11_TTJets1845_1.04
-    161.5 :  0.96 : all : Fall11_TTJets1615_0.96
-    161.5 :  1.00 : all : Fall11_TTJets1615_1.00
-    161.5 :  1.04 : all : Fall11_TTJets1615_1.04
-    163.5 :  0.96 : all : Summer11_TTJets1635_0.96
-    163.5 :  1.00 : all : Summer11_TTJets1635_1.00
-    163.5 :  1.04 : all : Summer11_TTJets1635_1.04
-    166.5 :  0.96 : all : Summer11_TTJets1665_0.96
-    166.5 :  1.00 : all : Summer11_TTJets1665_1.00
-    166.5 :  1.04 : all : Summer11_TTJets1665_1.04
-    169.5 :  0.96 : all : Summer11_TTJets1695_0.96
-    169.5 :  1.00 : all : Summer11_TTJets1695_1.00
-    169.5 :  1.04 : all : Summer11_TTJets1695_1.04
-    172.5 :  0.96 : all : Fall11_TTJets1725_0.96
-    172.5 :  1.00 : all : Fall11_TTJets1725_1.00
-    172.5 :  1.04 : all : Fall11_TTJets1725_1.04
-    175.5 :  0.96 : all : Summer11_TTJets1755_0.96
-    175.5 :  1.00 : all : Summer11_TTJets1755_1.00
-    175.5 :  1.04 : all : Summer11_TTJets1755_1.04
-    178.5 :  0.96 : all : Summer11_TTJets1785_0.96
-    178.5 :  1.00 : all : Summer11_TTJets1785_1.00
-    178.5 :  1.04 : all : Summer11_TTJets1785_1.04
-    181.5 :  0.96 : all : Summer11_TTJets1815_0.96
-    181.5 :  1.00 : all : Summer11_TTJets1815_1.00
-    181.5 :  1.04 : all : Summer11_TTJets1815_1.04
-    184.5 :  0.96 : all : Fall11_TTJets1845_0.96
-    184.5 :  1.00 : all : Fall11_TTJets1845_1.00
-    184.5 :  1.04 : all : Fall11_TTJets1845_1.04
+;    161.5 :  0.96 : all : Fall11_TTJets1615_0.96
+;    161.5 :  1.00 : all : Fall11_TTJets1615_1.00
+;    161.5 :  1.04 : all : Fall11_TTJets1615_1.04
+;    163.5 :  0.96 : all : Summer11_TTJets1635_0.96
+;    163.5 :  1.00 : all : Summer11_TTJets1635_1.00
+;    163.5 :  1.04 : all : Summer11_TTJets1635_1.04
+;    166.5 :  0.96 : all : Summer11_TTJets1665_0.96
+;    166.5 :  1.00 : all : Summer11_TTJets1665_1.00
+;    166.5 :  1.04 : all : Summer11_TTJets1665_1.04
+;    169.5 :  0.96 : all : Summer11_TTJets1695_0.96
+;    169.5 :  1.00 : all : Summer11_TTJets1695_1.00
+;    169.5 :  1.04 : all : Summer11_TTJets1695_1.04
+;    172.5 :  0.96 : all : Fall11_TTJets1725_0.96
+;    172.5 :  1.00 : all : Fall11_TTJets1725_1.00
+;    172.5 :  1.04 : all : Fall11_TTJets1725_1.04
+;    175.5 :  0.96 : all : Summer11_TTJets1755_0.96
+;    175.5 :  1.00 : all : Summer11_TTJets1755_1.00
+;    175.5 :  1.04 : all : Summer11_TTJets1755_1.04
+;    178.5 :  0.96 : all : Summer11_TTJets1785_0.96
+;    178.5 :  1.00 : all : Summer11_TTJets1785_1.00
+;    178.5 :  1.04 : all : Summer11_TTJets1785_1.04
+;    181.5 :  0.96 : all : Summer11_TTJets1815_0.96
+;    181.5 :  1.00 : all : Summer11_TTJets1815_1.00
+;    181.5 :  1.04 : all : Summer11_TTJets1815_1.04
+;    184.5 :  0.96 : all : Fall11_TTJets1845_0.96
+;    184.5 :  1.00 : all : Fall11_TTJets1845_1.00
+;    184.5 :  1.04 : all : Fall11_TTJets1845_1.04
