--- a/Configuration/grid-control/TT_FASTSIM.conf
+++ b/Configuration/grid-control/TT_FASTSIM.conf
@@ -8,7 +8,7 @@ backend      = local
 wall time    = 11:59 ; request 15min/1h/12h/48h computing time
 memory       = 3500
 ;monitor      = dashboard
-max retry    = 2
+max retry    = 0
 
 [storage]
 se path           = dir:///scratch/hh/current/cms/user/mseidel
@@ -46,7 +46,14 @@ dataset         =
 ;        TT_FASTSIM_TuneP11TeV : ListProvider : /scratch/hh/current/cms/user/mseidel/fastsim/samples.txt%TT_TuneP11TeV_7TeV_pythia6_FASTSIM_172_5GeV
 ;        TT_FASTSIM_TuneP11TeV_more : ListProvider : /scratch/hh/current/cms/user/mseidel/fastsim/samples.txt%TT_TuneP11TeV_7TeV_pythia6_FASTSIM_172_5GeV_more
 ;        TT_FASTSIM_TuneP11_more : ListProvider : /scratch/hh/current/cms/user/mseidel/fastsim/samples.txt%TT_TuneP11_7TeV_pythia6_FASTSIM_172_5GeV_more
-        TT_FASTSIM_TuneP11TeV_madgraph : ListProvider : /afs/naf.desy.de/user/m/mseidel/scratch/CMSSW_4_2_4/src/TopMass/Configuration/grid-control/datasets_v20120624r2.dbs%TT_TuneP11TeV_7TeV_madgraph_FASTSIM_172_5GeV_v1
+;        TT_FASTSIM_TuneP11TeV_madgraph : ListProvider : /afs/naf.desy.de/user/m/mseidel/scratch/CMSSW_4_2_4/src/TopMass/Configuration/grid-control/datasets_v20120624r2.dbs%TT_TuneP11TeV_7TeV_madgraph_FASTSIM_172_5GeV_v1
+
+        TT_FASTSIM_Z2_matchingdown_madgraph : ListProvider : /afs/naf.desy.de/user/m/mseidel/scratch/CMSSW_4_2_4/src/TopMass/Configuration/grid-control/datasets_v20120802r1.dbs%TT_TuneZ2_7TeV_madgraph_FASTSIM_172_5GeV_matchingdown_v1
+        TT_FASTSIM_Z2noCR_madgraph : ListProvider : /afs/naf.desy.de/user/m/mseidel/scratch/CMSSW_4_2_4/src/TopMass/Configuration/grid-control/datasets_v20120802r1.dbs%TT_TuneZ2noCR_7TeV_madgraph_FASTSIM_172_5GeV_v1
+        TT_FASTSIM_Z2fragP11_madgraph : ListProvider : /afs/naf.desy.de/user/m/mseidel/scratch/CMSSW_4_2_4/src/TopMass/Configuration/grid-control/datasets_v20120802r1.dbs%TT_TuneZ2fragP11_7TeV_madgraph_FASTSIM_172_5GeV_v1
+        TT_FASTSIM_Z2fragCor_madgraph : ListProvider : /afs/naf.desy.de/user/m/mseidel/scratch/CMSSW_4_2_4/src/TopMass/Configuration/grid-control/datasets_v20120802r1.dbs%TT_TuneZ2fragCor_7TeV_madgraph_FASTSIM_172_5GeV_v1
+        
+        
 
 arguments = sample=ttbar mcversion=Fall11 lepton=@lepton@
 
