--- a/Configuration/grid-control/Fall11_TTJets_ExtraSamples.conf
+++ b/Configuration/grid-control/Fall11_TTJets_ExtraSamples.conf
@@ -20,12 +20,12 @@ se output pattern = Fall11_@NICK@_@lepton@/job_@MY_JOBID@_@X@
 project area    = /afs/naf.desy.de/user/m/mseidel/scratch/CMSSW_4_2_4
 config file     = %(project area)s/src/TopMass/Configuration/analysis/analyzeTopHypotheses_cfg.py
 dataset         = 
-;  TTJets1725_matchingdown : 
+  TTJets1725_matchingdown : /TTjets_TuneZ2_matchingdown_7TeV-madgraph-tauola/Fall11-PU_S6_START42_V14B-v2/AODSIM
 ;  TTJets1725_matchingup : /TTjets_TuneZ2_matchingup_7TeV-madgraph-tauola/Fall11-PU_S6_START42_V14B-v2/AODSIM
 ;  TTJets1725_scaledown : /TTjets_TuneZ2_scaledown_7TeV-madgraph-tauola/Fall11-PU_S6_START42_V14B-v2/AODSIM
 ;  TTJets1725_scaleup : /TTjets_TuneZ2_scaleup_7TeV-madgraph-tauola/Fall11-PU_S6_START42_V14B-v1/AODSIM
-  TTJets1725_P11_CRStudy : /TTJets_TuneP11_7TeV-madgraph-tauola/Fall11-PU_S6_START42_V14B-v1/AODSIM
-  TTJets1725_P11noCR_CRStudy : /TTJets_TuneP11noCR_7TeV-madgraph-tauola/Fall11-PU_S6_START42_V14B-v2/AODSIM
+;  TTJets1725_P11 : /TTJets_TuneP11_7TeV-madgraph-tauola/Fall11-PU_S6_START42_V14B-v1/AODSIM
+;  TTJets1725_P11noCR : /TTJets_TuneP11noCR_7TeV-madgraph-tauola/Fall11-PU_S6_START42_V14B-v2/AODSIM
 ;  TTJets1725_powheg : /TT_TuneZ2_7TeV-powheg-tauola/Fall11-PU_S6_START42_V14B-v1/AODSIM
 ;  TTJets1725_mcatnlo : /TT_TuneZ2_7TeV-mcatnlo/Fall11-PU_S6_START42_V14B-v1/AODSIM
 
@@ -42,7 +42,7 @@ parameters = lJesFactor bJesFactor scaleType lepton
 lJesFactor = 1.00
 bJesFactor = 1.00
 scaleType  = abs
-lepton = electron
+lepton = electron muon
 
 [local]
 ;group = cms
