- added tempFilePath to Analysis class - fixed uninitialized variables in GenMatch and MVA analyzers - renamed config "RooFitTemplate" to "RooFit" - setup needed environment variables on-the-fly in TopMass.cxx constructor
- removed runTopMass.sh and setup_env.sh as they are not needed anymore
- updated GC config to changes

--- a/Analyzer/grid-control_topmass.conf
+++ b/Analyzer/grid-control_topmass.conf
@@ -17,8 +17,8 @@ wms = SGE
 site = hh
 
 [ROOTMod]
-executable = /afs/naf.desy.de/group/cms/scratch/eschliec/TopMassImproved/runTopMass.sh
-arguments  = -m RooFitTemplate -t pe -i @INPUT@ -M @MASS@ -J @JES@ -S @SHAPE@ -P @PERMU@ -F @FASTSIM@ -L 3545 -W 55
+executable = /afs/naf.desy.de/group/cms/scratch/eschliec/TopMass_hg_devel/Analyzer/TopMass
+arguments  = -m RooFit -t pe -i @INPUT@ -M @MASS@ -J @JES@ -S @SHAPE@ -P @PERMU@ -F @FASTSIM@ -L 3545 -W 55
 ;;arguments  = -m Ideogram -t pe -i @INPUT@ -M @MASS@ -J @JES@ -S @SHAPE@ -P @PERMU@ -F @FASTSIM@ -L 3545 -W 55
 ;;root path  = /afs/naf.desy.de/products/root/amd64_rhel50/5.28.00
 root path  = /afs/naf.desy.de/products/root/amd64_rhel50/5.32.00
