Different input for background systematics

--- a/Configuration/grid-control/topmass_sys_bkg.conf
+++ b/Configuration/grid-control/topmass_sys_bkg.conf
@@ -9,19 +9,20 @@ max retry  = 1
 
 [ROOTMod]
 executable = CMSSW_4_2_4/src/TopMass/Analyzer/TopMass
-arguments  = -t pe -i Fall11_TTJets1725_1.00 -M 172.5 -J 1.0 -l @LEPTON@ -L 5000 -W 500 -f @FSIG@
+arguments  = -t pe -i @INPUT@ -M 172.5 -J 1.0 -l @LEPTON@ -L 5000 -W 500 -f @FSIG@
 root path  = /afs/naf.desy.de/products/root/amd64_rhel50/5.32.00
 
 [storage]
 se path         = dir:///scratch/hh/current/cms/user/mseidel/topmass_120412_2120cp
 se output files = ensemble.root
-se output pattern = @LEPTON@/fSig_@FSIG@_Wbb/job_@MY_JOBID@_@X@
+se output pattern = @LEPTON@/@INPUT@_fSig_@FSIG@/job_@MY_JOBID@_@X@
 
 [ParaMod]
 module           = ROOTMod
 jobs             = 40
 
-parameters = FSIG LEPTON
+parameters = FSIG LEPTON INPUT
 
-FSIG    = 0.98
+INPUT   = Summer11_TTJets1695_1.00 Fall11_TTJets1725_1.00 Summer11_TTJets1755_1.00
+FSIG    = 0.92
 LEPTON  = electron muon all
