--- a/Analyzer/grid-control_topmass.conf
+++ b/Analyzer/grid-control_topmass.conf
@@ -1,9 +1,10 @@
 [global]
 module  = LinkedParaMod     ; Job uses user written scripts
 backend = local       ; Submit to local batch system
-workdir = /afs/naf.desy.de/user/e/eschliec/wd/TopMass/work.topmass_121016_1701
+workdir = /afs/naf.desy.de/user/e/eschliec/wd/TopMass_hg_devel/Analyzer/work.topmass_121114_1900
 
 [jobs]
+;;in flight    = 1
 ;;wall time  = 0:14
 wall time  = 0:59
 memory     = 6000
@@ -17,14 +18,17 @@ wms = SGE
 site = hh
 
 [ROOTMod]
-executable = /afs/naf.desy.de/group/cms/scratch/eschliec/TopMass_hg_devel/Analyzer/TopMass
-arguments  = -m RooFit -t pe -i @INPUT@ -M @MASS@ -J @JES@ -S @SHAPE@ -P @PERMU@ -F @FASTSIM@ -L 3545 -W 55
-;;arguments  = -m Ideogram -t pe -i @INPUT@ -M @MASS@ -J @JES@ -S @SHAPE@ -P @PERMU@ -F @FASTSIM@ -L 3545 -W 55
+executable  = /afs/naf.desy.de/user/e/eschliec/wd/TopMass_hg_devel/Analyzer/runTopMass.sh
+input files = /afs/naf.desy.de/user/e/eschliec/wd/TopMass_hg_devel/Analyzer/TopMass 
+              /afs/naf.desy.de/user/e/eschliec/wd/TopMass_hg_devel/Analyzer/setup_env.sh
+              /afs/naf.desy.de/user/e/eschliec/wd/TopMass_hg_devel/Analyzer/Configuration_alljets.xml
+;;arguments  = -m RooFit -t pe -i @INPUT@ -M @MASS@ -J @JES@ -S @SHAPE@ -P @PERMU@ -F @FASTSIM@ -b topMass -L 3545 -W 55
+arguments  = -m Ideogram -t pe -i @INPUT@ -M @MASS@ -J @JES@ -S @SHAPE@ -P @PERMU@ -F @FASTSIM@ -b topMass -L 3545 -W 55
 ;;root path  = /afs/naf.desy.de/products/root/amd64_rhel50/5.28.00
 root path  = /afs/naf.desy.de/products/root/amd64_rhel50/5.32.00
 
 [storage]
-se path         = dir:///scratch/hh/current/cms/user/eschliec/topmass_121016_1701
+se path         = dir:///scratch/hh/current/cms/user/eschliec/topmass_121114_1900
 ;;se path         = dir:///scratch/hh/dust/naf/cms/user/eschliec/topmass_120530_1701
 se output files = ensemble.root
 se output pattern = @INPUT@/MASS_@MASS@/JES_@JES@/SHAPE_@SHAPE@/PERMU_@PERMU@/job_@MY_JOBID@_@X@
