updated to new setup with L7 corrections

--- a/Analyzer/grid-control_topmass.conf
+++ b/Analyzer/grid-control_topmass.conf
@@ -1,13 +1,13 @@
 [global]
 module  = LinkedParaMod     ; Job uses user written scripts
 backend = local       ; Submit to local batch system
-workdir = /afs/naf.desy.de/user/e/eschliec/wd/TopMass_hg_devel/Analyzer/work.topmass_121114_1900
+workdir = /afs/naf.desy.de/user/e/eschliec/wd/TopMass_hg_devel/Analyzer/work.topmass_121126_1601b
 
 [jobs]
 ;;in flight    = 1
 ;;wall time  = 0:14
 wall time  = 0:59
-memory     = 6000
+memory     = 5500
 max retry  = 1
 monitor    = dashboard
 
@@ -28,7 +28,7 @@ arguments  = -m Ideogram -t pe -i @INPUT@ -M @MASS@ -J @JES@ -S @SHAPE@ -P @PERM
 root path  = /afs/naf.desy.de/products/root/amd64_rhel50/5.32.00
 
 [storage]
-se path         = dir:///scratch/hh/current/cms/user/eschliec/topmass_121114_1900
+se path         = dir:///scratch/hh/current/cms/user/eschliec/topmass_121126_1601b
 ;;se path         = dir:///scratch/hh/dust/naf/cms/user/eschliec/topmass_120530_1701
 se output files = ensemble.root
 se output pattern = @INPUT@/MASS_@MASS@/JES_@JES@/SHAPE_@SHAPE@/PERMU_@PERMU@/job_@MY_JOBID@_@X@
@@ -74,52 +74,52 @@ parameter values =
     ;;;;172.5 :  1.00 : 0.95 :  0.0 : 0 : Z2_S11_172_5_sig		 
     ;;;;172.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_S11_Matching_Down_sig
     ;;;;172.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_S11_Matching_Up_sig
-    ;; Fall11 mass samples
-    161.5 :  0.96 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_096_161_5_sig
-    161.5 :  0.98 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_098_161_5_sig
-    161.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_161_5_sig		 
-    161.5 :  1.02 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_102_161_5_sig		 
-    161.5 :  1.04 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_104_161_5_sig  
-    163.5 :  0.96 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_096_163_5_sig
-    163.5 :  0.98 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_098_163_5_sig
-    163.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_163_5_sig		 
-    163.5 :  1.02 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_102_163_5_sig		 
-    163.5 :  1.04 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_104_163_5_sig  
-    166.5 :  0.96 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_096_166_5_sig
-    166.5 :  0.98 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_098_166_5_sig
-    166.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_166_5_sig		 
-    166.5 :  1.02 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_102_166_5_sig		 
-    166.5 :  1.04 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_104_166_5_sig  
-    169.5 :  0.96 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_096_169_5_sig
-    169.5 :  0.98 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_098_169_5_sig
-    169.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_169_5_sig		 
-    169.5 :  1.02 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_102_169_5_sig		 
-    169.5 :  1.04 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_104_169_5_sig  
-    172.5 :  0.96 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_096_172_5_sig
-    172.5 :  0.98 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_098_172_5_sig
-    172.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_172_5_sig		 
-    172.5 :  1.02 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_102_172_5_sig		 
-    172.5 :  1.04 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_104_172_5_sig  
-    175.5 :  0.96 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_096_175_5_sig
-    175.5 :  0.98 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_098_175_5_sig
-    175.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_175_5_sig		 
-    175.5 :  1.02 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_102_175_5_sig		 
-    175.5 :  1.04 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_104_175_5_sig  
-    178.5 :  0.96 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_096_178_5_sig
-    178.5 :  0.98 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_098_178_5_sig
-    178.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_178_5_sig		 
-    178.5 :  1.02 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_102_178_5_sig		 
-    178.5 :  1.04 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_104_178_5_sig  
-    181.5 :  0.96 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_096_181_5_sig
-    181.5 :  0.98 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_098_181_5_sig
-    181.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_181_5_sig		 
-    181.5 :  1.02 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_102_181_5_sig		 
-    181.5 :  1.04 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_104_181_5_sig  
-    184.5 :  0.96 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_096_184_5_sig
-    184.5 :  0.98 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_098_184_5_sig
-    184.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_184_5_sig		 
-    184.5 :  1.02 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_102_184_5_sig		 
-    184.5 :  1.04 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_104_184_5_sig  
+    ;;;; Fall11 mass samples
+    ;;161.5 :  0.96 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_096_161_5_sig
+    ;;161.5 :  0.98 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_098_161_5_sig
+    ;;161.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_161_5_sig		 
+    ;;161.5 :  1.02 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_102_161_5_sig		 
+    ;;161.5 :  1.04 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_104_161_5_sig  
+    ;;163.5 :  0.96 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_096_163_5_sig
+    ;;163.5 :  0.98 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_098_163_5_sig
+    ;;163.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_163_5_sig		 
+    ;;163.5 :  1.02 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_102_163_5_sig		 
+    ;;163.5 :  1.04 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_104_163_5_sig  
+    ;;166.5 :  0.96 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_096_166_5_sig
+    ;;166.5 :  0.98 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_098_166_5_sig
+    ;;166.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_166_5_sig		 
+    ;;166.5 :  1.02 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_102_166_5_sig		 
+    ;;166.5 :  1.04 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_104_166_5_sig  
+    ;;169.5 :  0.96 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_096_169_5_sig
+    ;;169.5 :  0.98 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_098_169_5_sig
+    ;;169.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_169_5_sig		 
+    ;;169.5 :  1.02 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_102_169_5_sig		 
+    ;;169.5 :  1.04 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_104_169_5_sig  
+    ;;172.5 :  0.96 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_096_172_5_sig
+    ;;172.5 :  0.98 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_098_172_5_sig
+    ;;172.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_172_5_sig		 
+    ;;172.5 :  1.02 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_102_172_5_sig		 
+    ;;172.5 :  1.04 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_104_172_5_sig  
+    ;;175.5 :  0.96 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_096_175_5_sig
+    ;;175.5 :  0.98 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_098_175_5_sig
+    ;;175.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_175_5_sig		 
+    ;;175.5 :  1.02 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_102_175_5_sig		 
+    ;;175.5 :  1.04 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_104_175_5_sig  
+    ;;178.5 :  0.96 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_096_178_5_sig
+    ;;178.5 :  0.98 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_098_178_5_sig
+    ;;178.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_178_5_sig		 
+    ;;178.5 :  1.02 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_102_178_5_sig		 
+    ;;178.5 :  1.04 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_104_178_5_sig  
+    ;;181.5 :  0.96 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_096_181_5_sig
+    ;;181.5 :  0.98 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_098_181_5_sig
+    ;;181.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_181_5_sig		 
+    ;;181.5 :  1.02 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_102_181_5_sig		 
+    ;;181.5 :  1.04 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_104_181_5_sig  
+    ;;184.5 :  0.96 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_096_184_5_sig
+    ;;184.5 :  0.98 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_098_184_5_sig
+    ;;184.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_184_5_sig		 
+    ;;184.5 :  1.02 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_102_184_5_sig		 
+    ;;184.5 :  1.04 : 1.00 :  0.0 : 0 : Z2_F11_ABS_JES_104_184_5_sig  
     ;;;; Fall11 systematics
     ;;;;172.5 :  1.00 : 1.05 :  0.0 : 0 : Z2_F11_172_5_sig		 
     ;;;;172.5 :  1.00 : 0.95 :  0.0 : 0 : Z2_F11_172_5_sig		 
@@ -135,7 +135,7 @@ parameter values =
     ;;172.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_JES_Up_sig
     ;;172.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_JES_Down_sig
     ;;172.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_POWHEG_sig  
-    ;;;;172.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_MCNLO_sig  
+    ;;172.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_MCNLO_sig  
     ;;172.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_P11_sig  
     ;;172.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_P11_NoCR_sig  
     ;;172.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_PU_Up_sig
@@ -195,23 +195,23 @@ parameter values =
     ;;172.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_jet6_02_sig		 
     ;;;;172.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_jet6_05_sig		 
     ;;;;172.5 :  1.00 : 1.00 :  0.0 : 0 : Z2_F11_jet6_10_sig		 
-    ;;172.5 :  0.96 : 1.00 :  0.0 : 1 : Z2_F11_ABS_JES_096_FAST_sig
-    ;;172.5 :  1.00 : 1.00 :  0.0 : 1 : Z2_F11_FAST_sig
-    ;;172.5 :  1.04 : 1.00 :  0.0 : 1 : Z2_F11_ABS_JES_104_FAST_sig
+    172.5 :  0.96 : 1.00 :  0.0 : 1 : Z2_F11_ABS_JES_096_FAST_sig
+    172.5 :  1.00 : 1.00 :  0.0 : 1 : Z2_F11_FAST_sig
+    172.5 :  1.04 : 1.00 :  0.0 : 1 : Z2_F11_ABS_JES_104_FAST_sig
     ;;172.5 :  1.00 : 1.00 :  0.0 : 1 : Z2_F11_Matching_Down_FAST_sig
-    ;;172.5 :  1.00 : 1.00 :  0.0 : 1 : Z2_F11_P11_FAST_sig
-    ;;172.5 :  1.00 : 1.00 :  0.0 : 1 : Z2_F11_P11mpiHi_FAST_sig
-    ;;172.5 :  1.00 : 1.00 :  0.0 : 1 : Z2_F11_P11TeV_FAST_sig
-    ;;172.5 :  1.00 : 1.00 :  0.0 : 1 : Z2_F11_P11_FAST_v3_sig
-    ;;172.5 :  1.00 : 1.00 :  0.0 : 1 : Z2_F11_P11mpiHi_FAST_v3_sig
-    ;;172.5 :  1.00 : 1.00 :  0.0 : 1 : Z2_F11_P11TeV_FAST_v3_sig
-    ;;;;172.5 :  1.00 : 1.00 :  0.1 : 0 : Z2_F11_172_5_sig
-    ;;;;172.5 :  1.00 : 1.00 :  0.2 : 0 : Z2_F11_172_5_sig
-    ;;;;172.5 :  1.00 : 1.00 :  0.3 : 0 : Z2_F11_172_5_sig
-    ;;;;172.5 :  1.00 : 1.00 :  0.4 : 0 : Z2_F11_172_5_sig
-    ;;;;172.5 :  1.00 : 1.00 : -0.1 : 0 : Z2_F11_172_5_sig
-    ;;;;172.5 :  1.00 : 1.00 : -0.2 : 0 : Z2_F11_172_5_sig
-    ;;;;172.5 :  1.00 : 1.00 : -0.3 : 0 : Z2_F11_172_5_sig
-    ;;;;172.5 :  1.00 : 1.00 : -0.4 : 0 : Z2_F11_172_5_sig
-    ;;;;172.5 :  1.00 : 1.00 :  0.0 : 1 : Z2_F11_fragCor_FAST_sig
-    ;;;;172.5 :  1.00 : 1.00 :  0.0 : 1 : Z2_F11_fragP11_FAST_sig
+    172.5 :  1.00 : 1.00 :  0.0 : 1 : Z2_F11_P11_FAST_sig
+    172.5 :  1.00 : 1.00 :  0.0 : 1 : Z2_F11_P11mpiHi_FAST_sig
+    172.5 :  1.00 : 1.00 :  0.0 : 1 : Z2_F11_P11TeV_FAST_sig
+    172.5 :  1.00 : 1.00 :  0.0 : 1 : Z2_F11_P11_FAST_v3_sig
+    172.5 :  1.00 : 1.00 :  0.0 : 1 : Z2_F11_P11mpiHi_FAST_v3_sig
+    172.5 :  1.00 : 1.00 :  0.0 : 1 : Z2_F11_P11TeV_FAST_v3_sig
+    ;;172.5 :  1.00 : 1.00 :  0.1 : 0 : Z2_F11_172_5_sig
+    ;;172.5 :  1.00 : 1.00 :  0.2 : 0 : Z2_F11_172_5_sig
+    ;;172.5 :  1.00 : 1.00 :  0.3 : 0 : Z2_F11_172_5_sig
+    ;;172.5 :  1.00 : 1.00 :  0.4 : 0 : Z2_F11_172_5_sig
+    ;;172.5 :  1.00 : 1.00 : -0.1 : 0 : Z2_F11_172_5_sig
+    ;;172.5 :  1.00 : 1.00 : -0.2 : 0 : Z2_F11_172_5_sig
+    ;;172.5 :  1.00 : 1.00 : -0.3 : 0 : Z2_F11_172_5_sig
+    ;;172.5 :  1.00 : 1.00 : -0.4 : 0 : Z2_F11_172_5_sig
+    ;;172.5 :  1.00 : 1.00 :  0.0 : 1 : Z2_F11_fragCor_FAST_sig
+    ;;172.5 :  1.00 : 1.00 :  0.0 : 1 : Z2_F11_fragP11_FAST_sig
