- implemented classes for new tree style (RandomSubsetCreator and IdeogramAnalyzer) - bugfix in IdeogramAnalyzer (minimum of likelihood was contrained too much and could lead to unstable fit results) - clean up

--- a/Analyzer/Configuration_AllJets.conf
+++ b/Analyzer/Configuration_AllJets.conf
@@ -1,3 +1,8 @@
+# global options
+weight="puWeight"
+
 [analysisConfig]
-selection="probs[0] > 0.09 && dRbb > 1.5 && topMasses[0] > 100.0 && topMasses[0] < 550.0"
+#selection="probs[0] > 0.09 && dRbb > 1.5 && topMasses[0] > 100.0 && topMasses[0] < 550.0"
+#selection="probs[0] > 0.09 && topMasses[0] > 100.0 && topMasses[0] < 550.0"
+selection="fitProb[0] > 0.09 && fitTop1[0].M() > 100.0 && fitTop2[0].M() < 550.0"
 samplePath="/scratch/hh/lustre/cms/user/eschliec/TopMass/21/"
