--- a/Analyzer/Makefile
+++ b/Analyzer/Makefile
@@ -1,13 +1,17 @@
-C := g++ -O3 -Wall -fPIC
-L := g++ 
+C := g++ -g -Wall -fPIC
+L := g++ -g
 
-ROOTCFLAGS := $(shell root-config --cflags)
-ROOTLIBS   := $(shell root-config --libs) -lRooFit
+ROOTCFLAGS  := $(shell root-config --cflags)
+ROOTLIBS    := $(shell root-config --libs) -lRooFit
 ROOTLDFLAGS := $(shell root-config --ldflags)
 
+# files for TopMassAnalyzer
 CXX_FILES := $(wildcard src/*.cxx)
 OBJ_FILES := $(patsubst src/%.cxx,obj/%.o,$(filter-out src/main.cxx, $(CXX_FILES)))
-
+# files from CMSSW for classes in the tree
+CXX_FILES_CMSSW := $(wildcard ../TopEventTree/src/*.cc)
+OBJ_FILES_CMSSW := $(patsubst ../TopEventTree/src/%.cc,obj2/%.o,$(filter-out ../TopEventTree/src/TreeRegistryService.cc, $(CXX_FILES_CMSSW)))
+OBJ_FILES_CMSSW_DICT := $(patsubst ../TopEventTree/src/%.cc,obj2/%_dict.o,$(filter-out ../TopEventTree/src/TreeRegistryService.cc, $(CXX_FILES_CMSSW)))
 
 .PHONY: clean all
 
@@ -15,28 +19,28 @@ all: TopMass
 
 clean:
 	@rm -rf obj
+	@rm -rf obj2
 	@rm -f lib/libTopMass.so
 	@rm -f TopMass
 obj:
 	@mkdir -p obj
+	@mkdir -p obj2
 
-
-libTopMass.so:	obj $(OBJ_FILES) 
-	$(L) $(ROOTLDFLAGS) -shared $(OBJ_FILES) -o lib/$@
-
-# export LHAPATH=/afs/naf.desy.de/user/e/eschliec/wd/LHAPDF/share/lhapdf/PDFsets
-# export LD_LIBRARY_PATH=/afs/naf.desy.de/user/e/eschliec/wd/LHAPDF/lib:$LD_LIBRARY_PATH
-TopMass: obj  $(OBJ_FILES) obj/main.o
-	$(L) $(ROOTLDFLAGS) $(ROOTLIBS) -Wl,-rpath -Wl,lib -lboost_program_options -L/afs/naf.desy.de/user/e/eschliec/wd/LHAPDF/lib -lLHAPDF -o $@ obj/main.o $(OBJ_FILES)
-	@echo "Compiling successfully done"
-
-#obj/%.o: src/%.cxx
-#	$(C) $(ROOTCFLAGS) -Iinc/ -c -o $@ $<
+TopMass: obj $(OBJ_FILES) $(OBJ_FILES_CMSSW) $(OBJ_FILES_CMSSW_DICT) obj/main.o
+	$(L) $(ROOTLDFLAGS) $(ROOTLIBS) -Wl,-rpath -Wl,lib -lboost_program_options -L/afs/naf.desy.de/user/e/eschliec/wd/LHAPDF/lib -lLHAPDF -o $@ obj/main.o $(OBJ_FILES) $(OBJ_FILES_CMSSW) $(OBJ_FILES_CMSSW_DICT)
+	@echo -e "\033[32m\033[1mCompiling successfully done"
 
 #rules
-obj/%.o: src/%.cxx 
-	$(C) $(ROOTCFLAGS) -Iinc/ -I/afs/naf.desy.de/user/e/eschliec/wd/LHAPDF/include  -MMD -c -o $@ $<
+obj/%.o: src/%.cxx
+	$(C) $(ROOTCFLAGS) -I../.. -Iinc/ -I/afs/naf.desy.de/user/e/eschliec/wd/LHAPDF/include -MMD -c -o $@ $<
 #@sed -e 's/#.*//' -e 's/^[^:]*: *//' -e 's/ *\\$$//' \
 #     -e '/^$$/ d' -e 's/$$/ :/' < $*.d >> $*.d
 
--include $(patsubst src/%.cxx,obj/%.d,$(CXX_FILES))
+obj2/%_dict.cc: ../TopEventTree/interface/%.h ../TopEventTree/interface/%_LinkDef.h
+	rootcint -l -f $@ -c -DSTANDALONE $^
+
+obj2/%_dict.o: obj2/%_dict.cc
+	$(C) $(ROOTCFLAGS) -I../.. -I. -MMD -c $< -o $@
+
+obj2/%.o: ../TopEventTree/src/%.cc
+	$(C) $(ROOTCFLAGS) -I../.. -MMD -c -o $@ $<
