- calibration now read from RooWorkspace created by Calibration executable in IdeogramAnalyzerNewInterface - Helper now chooses by itself which label needs to be drawn - fixed tasks from tinyxml2

--- a/Analyzer/Configuration_AllJets.conf
+++ b/Analyzer/Configuration_AllJets.conf
@@ -5,4 +5,5 @@ weight="puWeight"
 #selection="probs[0] > 0.09 && dRbb > 1.5 && topMasses[0] > 100.0 && topMasses[0] < 550.0"
 #selection="probs[0] > 0.09 && topMasses[0] > 100.0 && topMasses[0] < 550.0"
 selection="fitProb[0] > 0.09 && fitTop1[0].M() > 100.0 && fitTop2[0].M() < 550.0"
-samplePath="/scratch/hh/lustre/cms/user/eschliec/TopMass/21/"
+#samplePath="/scratch/hh/lustre/cms/user/eschliec/TopMass/21/"
+samplePath="/scratch/hh/dust/naf/cms/user/eschliec/TopMass/19/"
