- some variables are made const if they should not be modified - added enum for method to Helper - added new binning category, 100 < mTop < 550 (for the new tree structure) - program options are now printed a bit wider to be better readable - clean up

--- a/Analyzer/Configuration_AllJets.conf
+++ b/Analyzer/Configuration_AllJets.conf
@@ -1,5 +1,6 @@
 # global options
 weight="puWeight"
+binning="fitTop1[0].M()"
 
 [analysisConfig]
 #selection="probs[0] > 0.09 && dRbb > 1.5 && topMasses[0] > 100.0 && topMasses[0] < 550.0"
